2002-01-18  Christian Zuckschwerdt  <zany@triq.net>

	* Initial beta.
	* It's work in progress so expect errors and report/fix then!
