@@ -1,5 +1,5 @@
 AC_INIT(src/ircp.c)
-AM_INIT_AUTOMAKE(s45obex, 0.1)
+AM_INIT_AUTOMAKE(s45obex, 0.2)
 AM_CONFIG_HEADER(config.h)
 
 AM_MAINTAINER_MODE
