@@ -16,6 +16,6 @@ libircp_a_SOURCES = \
 
 noinst_LIBRARIES = libircp.a
 
-s45obex_SOURCES = ircp.c
+s45obex_SOURCES = ircp.c cobex_S45.c
 
 bin_PROGRAMS = s45obex 
