@@ -16,12 +16,14 @@ typedef struct ircp_client
 } ircp_client_t;
 
 
-ircp_client_t *ircp_cli_open(ircp_info_cb_t infocb);
+ircp_client_t *ircp_cli_open(ircp_info_cb_t infocb, obex_ctrans_t *ctrans);
 void ircp_cli_close(ircp_client_t *cli);
 gint ircp_cli_connect(ircp_client_t *cli);
 gint ircp_cli_disconnect(ircp_client_t *cli);
 gint ircp_put(ircp_client_t *cli, gchar *name);
+gint ircp_del(ircp_client_t *cli, gchar *name);
 gint ircp_list(ircp_client_t *cli, gchar *localname, gchar *remotename);
 gint ircp_get(ircp_client_t *cli, gchar *localname, gchar *remotename);
+gint ircp_rename(ircp_client_t *cli, gchar *sourcename, gchar *targetname);
 	
 #endif
