@@ -1,3 +1,7 @@
+2002-01-19  Christian Zuckschwerdt  <zany@triq.net>
+
+	* Implemented delete and rename.
+
 2002-01-18  Christian Zuckschwerdt  <zany@triq.net>
 
 	* Initial beta.
